--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
   Tags: "https://melyanna.github.io/tags/"
   # Website: "https://melyanna.net/"
   Resources: "getstarted"
+  Table-Demo: "table-demo"
   Subscribe: "subscribe"
   Search: "search"
 
