--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,7 @@ navbar-links:
     - Learn markdown: "http://www.markdowntutorial.com/"
     - Getting Started: "getstarted"
     - Table-Demo: "table-demo"
-  Subscribe: "subscribe"
-  Search: "search"
+  Author's home: "https://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -48,13 +47,13 @@ title-img: "/img/avatar/favicon.png"
 
 navbar-col: "#191970"
 navbar-text-col: "#FFFFFF"
-navbar-children-col: "#191970"
+navbar-children-col: "#FFA500"
 page-col: "#708090"
-link-col: "#FFFFFF"
-hover-col: "#FFFFFF"
+link-col: "#98FB98"
+hover-col: "#800080"
 footer-col: "#708090"
-footer-text-col: "#FFFFFF"
-footer-link-col: "#FFFFFF"
+footer-text-col: "#8B4513"
+footer-link-col: "#00FF7F"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
