--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,13 @@ description: A shrine to myself.
 
 # List of links in the navigation bar
 navbar-links:
-  Blog: ""
   About: "about"
   Resources: 
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - Getting Started: "getstarted"
     - Table-Demo: "table-demo"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://github.com/herbertm533"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -75,9 +74,9 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "melyanna@tutanota.com"
+  email: "herbertm533@gmail.com"
 #  facebook: daattali
-  github: melyanna
+  github: herbertm533
   twitter: OoMelyannaoO
 #  reddit: yourname
 #  google-plus: +DeanAttali
