--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ page-img: "/img/bg/noise.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Melyanna
+  name: Herb Mueller
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -101,7 +101,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "melyanna.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "herbertm533.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
