--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
     - Getting Started: "getstarted"
     - Table-Demo: "table-demo"
   Author's home: "https://github.com/herbertm533"
-  Quantmod Code Through: "Code-Through-Mueller.html"
+  Quantmod Code Through: "Quantmod-Code-Through.html"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
